--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
     <script>
         // --- CONFIG & STATE ---
-        const GOD_PASSWORD = "1234";
+        const GOD_PASSWORD = "s12c3";
         const DEFAULT_STATE = { 
             step: 'SETUP', 
             players: [], 
