Change grid layout and update GOD_PASSWORD

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         /* Quick Add Chips - 3 Per Line */
         .chip-container { 
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns: repeat(4, 1fr);
             gap: 8px; 
             margin-top: 10px; 
             margin-bottom: 20px; 
@@ -337,7 +337,7 @@
 
     <script>
         // --- CONFIG & STATE ---
-        const GOD_PASSWORD = "1234";
+        const GOD_PASSWORD = "line1up";
         const AUTO_NAMES = ["Alec", "Alain", "Nada", "Hoda", "Fadi", "Noa", "Gio", "Neo", "Nounou", "Assaad", "Chris", "Eliott"];
         const DEFAULT_STATE = { 
             step: 'SETUP', 
