--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
                     <option value="system-ui, sans-serif">Clean (System)</option>
                 </select>
 
+                <!-- 3.1. Controls (NEW) -->
+                <label class="label">Controls (Verify Screen)</label>
+                <select id="controlInput" onchange="updateTheme('controls', this.value)" style="margin-bottom:15px;">
+                    <option value="jump">Two-Tap Jump (Recommended)</option>
+                    <option value="arrows">Legacy Arrows (Up/Down)</option>
+                </select>
+
                 <!-- 3. Existing Sliders -->
                 <div class="divider"></div>
                 
